--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 
   <body class="bg-body-tertiary">
     <%= render ('layouts/shared/navbar') %>
+    
     <%= yield %>
+    
+    <%= render ('layouts/shared/footer') %>
   </body>
 </html>
