--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,111 +1,80 @@
-<div class="container">
-  <main>
-    <div class="py-5 text-center">
-      <h2>Adding new product</h2>
-      <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
-    </div>
-
+<% content_for :title do %>
+  Add new product
+<% end %>
+<% content_for :content do %>
+  <div class="py-5 text-center">
+    <h2>Adding new product</h2>
+    <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+  </div>
+  <%= form_with(model: @product, local: true) do |form| %>
     <div class="row g-5">
       <div class="col-md-12">
-        <form class="needs-validation" novalidate>
           <div class="row g-3">
             <div class="col-12">
-              <label for="username" class="form-label">Barcode</label>
+              <%= form.label :barcode, class: "form-label" %><span class="text-primary">*</span>
               <div class="input-group has-validation">
                 <span class="input-group-text">#</span>
-                <input type="text" class="form-control" id="username" placeholder="Product barcode" required>
-              <div class="invalid-feedback">
-                  Barcode is required.
-                </div>
+                <%= form.number_field :barcode, class: "form-control", placeholder: "Product barcode", required: true %>
               </div>
             </div>
             
-            <div class="col-sm-3">
-              <label for="firstName" class="form-label">Regular Price</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
-            </div>
-
-            <div class="col-sm-3">
-              <label for="lastName" class="form-label">Promo price <span class="text-body-secondary">(Optional)</span></label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
+            <div class="col-6">
+              <%= form.label :name, class: "form-label" %><span class="text-primary">*</span>
+              <%= form.text_field :name, class: "form-control", placeholder: "Full product name", required: true %>
             </div>
             
-            
-            <div class="col-md-6">
-              <label for="state" class="form-label">Store</label>
-              <select class="form-select" id="state" required>
-                <option value="">Choose...</option>
-                <option>California</option>
-              </select>
-              <div class="invalid-feedback">
-                Please provide a valid state.
-              </div>
+            <div class="col-md-3">
+              <%= form.label :category, class: "form-label" %><span class="text-primary">*</span>
+              <%= form.select :category, options_for_select(['банани']), { include_blank: "Select selling type" }, { class: "form-select", required: true } %>
             </div>
 
-
-            <div class="col-12">
-              <label for="email" class="form-label">Name <span class="text-body-secondary">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
+            <div class="col-md-3">
+              <%= form.label :image, class: "form-label" %>
+              <%= form.file_field :image, class: "form-control", id: "image-2", accept: "image/gif, image/jpeg, image/png" %>
+            </div>
+            
+            <div class="form-group">
+              <%= form.label :description, class: "form-label" %>
+              <textarea class="form-control" rows="3"></textarea>
             </div>
             
             <hr class="my-3">
             
-            <div class="col-12">
-              <label for="email" class="form-label">Description <span class="text-body-secondary">(Optional)</span></label>
-              <input type="textarea" class="form-control" id="email" placeholder="you@example.com">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
-            </div>
+            <div class="col-md-2">
+              <%= form.label :currency, class: "form-label" %><span class="text-primary">*</span>
+              <%= form.select :currency, options_for_select(['BGN', 'EUR', 'USD']), { include_blank: "Select currency" }, { class: "form-select", required: true } %>
+            </div> 
             
-            <div class="col-md-5">
-              <label for="country" class="form-label">Category</label>
-              <select class="form-select" id="country" required>
-                <option value="">Choose...</option>
-                <option>United States</option>
-              </select>
-              <div class="invalid-feedback">
-                Please select a valid country.
-              </div>
+            <div class="col-sm-3">
+              <%= form.label :price, class: "form-label" %><span class="text-primary">*</span>
+              <%= form.number_field :price, class: "form-control", placeholder: "Regular price", required: true %>
             </div>
 
-            <div class="col-md-3">
-              <label for="zip" class="form-label">Image</label>
-              <input type="text" class="form-control" id="zip" placeholder="" required>
+            <div class="col-sm-3">
+              <%= form.label :promo_price, class: "form-label" %> <span class="text-body-secondary">(Optional)</span>
+              <%= form.number_field :promo_price, class: "form-control", placeholder: "Promotional price" %>
+            </div>       
+            
+            <div class="col-md-4">
+              <label for="state" class="form-label">Store</label>
+              <select class="form-select" id="state" required>
+                <option value="">Choose...</option>
+                <option>Metro</option>
+              </select>
               <div class="invalid-feedback">
-                Zip code required.
+                Please provide store.
               </div>
             </div>
           </div>
 
-          <div class="form-check mt-5">
+          <div class="form-check mt-4 mb-4">
             <input type="checkbox" class="form-check-input" id="same-address">
             <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
           </div>
 
-          <hr class="my-4">
 
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
-        </form>
-      </div>
+            <button class="w-100 btn btn-primary btn-lg" type="submit">Add product</button>
+        </div>
     </div>
-  </main>
-
-  <footer class="my-5 pt-5 text-body-secondary text-center text-small">
-    <p class="mb-1">&copy; 2017–2023 Company Name</p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
-  </footer>
-</div>
+  <% end %>
+<% end %>
