--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,75 +6,5 @@
     <h2>Adding new product</h2>
     <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
   </div>
-  <%= form_with(model: @product, local: true) do |form| %>
-    <div class="row g-5">
-      <div class="col-md-12">
-          <div class="row g-3">
-            <div class="col-12">
-              <%= form.label :barcode, class: "form-label" %><span class="text-primary">*</span>
-              <div class="input-group has-validation">
-                <span class="input-group-text">#</span>
-                <%= form.number_field :barcode, class: "form-control", placeholder: "Product barcode", required: true %>
-              </div>
-            </div>
-            
-            <div class="col-6">
-              <%= form.label :name, class: "form-label" %><span class="text-primary">*</span>
-              <%= form.text_field :name, class: "form-control", placeholder: "Full product name", required: true %>
-            </div>
-            
-            <div class="col-md-3">
-              <%= form.label :category, class: "form-label" %><span class="text-primary">*</span>
-              <%= form.select :category, options_for_select(['банани']), { include_blank: "Select selling type" }, { class: "form-select", required: true } %>
-            </div>
-
-            <div class="col-md-3">
-              <%= form.label :image, class: "form-label" %>
-              <%= form.file_field :image, class: "form-control", id: "image-2", accept: "image/gif, image/jpeg, image/png" %>
-            </div>
-            
-            <div class="form-group">
-              <%= form.label :description, class: "form-label" %>
-              <textarea class="form-control" rows="3"></textarea>
-            </div>
-            
-            <hr class="my-3">
-            
-            <div class="col-md-2">
-              <%= form.label :currency, class: "form-label" %><span class="text-primary">*</span>
-              <%= form.select :currency, options_for_select(['BGN', 'EUR', 'USD']), { include_blank: "Select currency" }, { class: "form-select", required: true } %>
-            </div> 
-            
-            <div class="col-sm-3">
-              <%= form.label :price, class: "form-label" %><span class="text-primary">*</span>
-              <%= form.number_field :price, class: "form-control", placeholder: "Regular price", required: true %>
-            </div>
-
-            <div class="col-sm-3">
-              <%= form.label :promo_price, class: "form-label" %> <span class="text-body-secondary">(Optional)</span>
-              <%= form.number_field :promo_price, class: "form-control", placeholder: "Promotional price" %>
-            </div>       
-            
-            <div class="col-md-4">
-              <label for="state" class="form-label">Store</label>
-              <select class="form-select" id="state" required>
-                <option value="">Choose...</option>
-                <option>Metro</option>
-              </select>
-              <div class="invalid-feedback">
-                Please provide store.
-              </div>
-            </div>
-          </div>
-
-          <div class="form-check mt-4 mb-4">
-            <input type="checkbox" class="form-check-input" id="same-address">
-            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-          </div>
-
-
-            <button class="w-100 btn btn-primary btn-lg" type="submit">Add product</button>
-        </div>
-    </div>
-  <% end %>
+  <%= render ('form') %>
 <% end %>
