--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,6 @@
 <% content_for :title do %>
   Products
 <% end %>
-
 <% content_for :content do %>
   <main class="container">
     <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
@@ -11,23 +10,23 @@
         <small>Since 2011</small>
       </div>
     </div>
-
     <div class="my-3 p-3 bg-body rounded shadow-sm">
       <h6 class="border-bottom pb-2 mb-0">Recent updates</h6>
       <% @products.each do |product| %>
-      <div class="d-flex text-body-secondary pt-3">
-        <%= image_tag(product.image, class: "d-placeholder-img flex-shrink-0 me-2 rounded", style: 'height:32px; width:32px;', loading: "lazy") %>
-        <p class="pb-3 mb-0 small lh-sm border-bottom">
-          <strong class="d-block text-gray-dark"><%= product.title %></strong>
-          <%= truncate(product.description, length: 220) %>
-        </p>
-      </div>
+        <%= link_to product_path(product), class: "text-decoration-none" do %>
+          <div class="d-flex text-body-secondary pt-3">
+            <%= image_tag(product.image, class: "d-placeholder-img flex-shrink-0 me-2 rounded", style: 'height:32px; width:32px;', loading: "lazy") if product.image.attached? %>
+            <p class="pb-3 mb-0 small lh-sm border-bottom">
+              <strong class="d-block text-gray-dark"><%= product.title %></strong>
+              <%= truncate(product.description, length: 220) %>
+            </p>
+          </div>
+        <% end %>
       <% end %>
       <small class="d-block text-end mt-3">
         <a href="#">All updates</a>
       </small>
     </div>
-
     <div class="my-3 p-3 bg-body rounded shadow-sm">
       <h6 class="border-bottom pb-2 mb-0">Suggestions</h6>
       <div class="d-flex text-body-secondary pt-3">
