--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -56,10 +56,13 @@
     <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="bi bi-heart me-1"></i>Favorites</a>
+          <a class="nav-link" href="#">Catalogues</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="bi bi-card-checklist me-1"></i>Notes</a>
+          <a class="nav-link" href="#">Favorites</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Notes</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person me-1"></i>Profile</a>
@@ -74,7 +77,44 @@
         <input class="form-control w-100 me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <a class="btn btn-primary" href="<%= new_product_path %>"><i class="bi bi-plus me-1"></i>NEW</a>
+      <a class="btn btn-primary me-2" href="<%= new_product_path %>"><i class="bi bi-plus me-1"></i>NEW</a>
+      
+      <div class="d-flex align-items-center">
+         <!-- Avatar -->
+         <div class="dropdown">
+           <a
+             data-mdb-dropdown-init
+             class="dropdown-toggle d-flex align-items-center hidden-arrow"
+             href="#"
+             id="navbarDropdownMenuAvatar"
+             role="button"
+             aria-expanded="false"
+           >
+             <img
+               src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+               class="rounded-circle"
+               height="25"
+               alt="Black and White Portrait of a Man"
+               loading="lazy"
+             />
+           </a>
+           <ul
+             class="dropdown-menu dropdown-menu-end"
+             aria-labelledby="navbarDropdownMenuAvatar"
+           >
+             <li>
+               <a class="dropdown-item" href="#">My profile</a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="#">Settings</a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="#">Logout</a>
+             </li>
+           </ul>
+         </div>
+   </div>
+      
     </div>
   </div>
 </nav>
