--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= turbo_refreshes_with method: :morph, scroll: :preserve  %>
     <%= yield(:head) %>
   </head>
   <body class="bg-body-tertiary">
