--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,7 @@
   Products
 <% end %>
 <% content_for :content do %>
+<%= turbo_stream_from @products %>
   <main class="container">
     <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
       <img class="me-3" src="../assets/brand/bootstrap-logo-white.svg" alt="" width="48" height="38">
