--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,8 @@
   Add new product
 <% end %>
 <% content_for :content do %>
-  <!-- Product Detail Page -->
+<%= turbo_stream_from @product %>
+<h1><%= @product.title %></h1>
   <div class="container py-5">
     <div class="row">
               <h1 class="fw-bold mb-3"><%= @product.title %></h1>
