--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -37,8 +37,8 @@
           <!-- Category Field -->
           <div class="col-md-3">
             <%= form.label :category, class: "form-label" %><span class="text-primary">*</span>
-            <%= form.collection_select :category_id, Category.all, :id, :title, { include_blank: "Select category" }, { class: "form-select", required: true } %>
-          </div>
+            <%= form.collection_select :category_ids, Category.all, :id, :title, {}, { multiple: true, class: "form-select", required: true } %>
+        </div>
           <!-- Image Upload Field -->
           <div class="col-md-3">
             <%= form.label :image, class: "form-label" %>
